# tfhe-c-api-dynamic-buffer

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml
.github/workflows/: make_release.yml  test.yml
c_api_tests/: CMakeLists.txt  test_dynamic_buffer.c
src/: lib.rs
